# namelist-mod-gen

./: .gitignore  LICENSE  Makefile  README.md  analyze_logs.sh  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: mod-gen-bug-report.md  mod-gen-feature-request.md  namelist-contribution.md  namelist-feature-request.md  namelist-mod-bug-report.md  namelist-mod-bug.md  osiris-s-namelist-contribution.md  osiris-s-namelist-mod-bug-report.md
docs/: DEPLOY.md  SteamDesc.md
examples/docs/: VERSIONING.md
examples/input_csvs/: ancient_egyptian.csv  ancientegypt.csv  ancientegyptian.csv  arabian.csv  astrosci.csv  testing.csv
examples/temp/: Osiris Namelists for Stellaris - Arabian.csv  Osiris Namelists for Stellaris - Medieval.csv  Osiris Namelists for Stellaris - Soviet Union.csv  Osiris Namelists for Stellaris - Star Trek-esque.csv
examples/template/: template.csv
namelist_mod_gen/: namelist_mod_gen.py
namelist_mod_gen/clean/: cleaner.py
namelist_mod_gen/constants/: constants.py
namelist_mod_gen/db/: db.py  sql_alchemy_connection.py  sqlite_connection.py
namelist_mod_gen/execution/: execute.py
namelist_mod_gen/file_handlers/: csv.py  paths.py  txt.py  writers.py
namelist_mod_gen/localisation/: localisation.py
namelist_mod_gen/nmg_logging/: logger.py
namelist_mod_gen/templates/: descriptors.yml  namelist.txt
namelist_mod_gen/token_handlers/: handlers.py
namelist_mod_gen/translation/: translate.py
namelist_mod_gen/validation/: validation.py
released/osiris_namelists_stellaris/: ParadoxDesc.md  SteamDesc.md  descriptor.mod
scripts/: memcheck.py
tests/: test_cleaner.py  test_db.py  test_file_handler.py  test_gen.py  test_localisation.py  test_logger.py  test_nmg_logging.py  test_validation.py  testing_template.py
(+825 files in other folders)
