[tool.poetry]
name = "namelist-mod-gen"
version = "1.0.0"
description = "A tool for generating fully localized Stellaris namelists."
authors = ["Osiris1975 <amr@aaleil.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "namelist_mod_gen"}]

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
jinja2schema = "^0.1.4"
translators = "^5.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
