[tool.poetry]
name = "namelist-mod-gen"
version = "0.0.1"
description = "a tool for generating stellaris namelist mods"
authors = ["Osiris1975 <amr@aaleil.com>"]
readme = "README.md"
packages = [{include = "namelist_mod_gen"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
jinja2schema = "^0.1.4"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.2"
jinja2schema = "^0.1.4"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
