[tool.poetry]
name = "namelist-mod-gen"
version = "1.0.1"
description = "a tool for generating stellaris namelist mods"
authors = ["Osiris1975 <amr@aaleil.com>"]
readme = "README.md"
packages = [{include = "src/namelist_mod_gen"}]

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^3.1.2"
jinja2schema = "^0.1.4"
pathlib = "^1.0.1"
colorlog = "^6.7.0"
regex = "^2022.10.31"
requests = "^2.28.2"
translators = "^5.6.3"
deepl = "^1.14.0"
googletrans = "^3.1.0a0"
easynmt = "^2.0.2"
sqlalchemy = "^2.0.7"
pytest = "^7.2.2"
backoff = "^2.2.1"
ratelimit = "^2.2.1"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"